<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014 Michal Dabski
  
  Permission is hereby granted, free of charge, to any person obtaining a copy of
  this software and associated documentation files (the "Software"), to deal in
  the Software without restriction, including without limitation the rights to
  use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
  the Software, and to permit persons to whom the Software is furnished to do so,
  subject to the following conditions:
  
  The above copyright notice and this permission notice shall be included in all
  copies or substantial portions of the Software.
  
  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources>

    <string name="app_name">File Manager Pro</string>
    <string name="title_activity_about">About</string>
    <string name="cannot_read_directory_s">Cannot read directory %s</string>
    <string name="open_file_with_">Open %s with:</string>
    <string name="size_s">Size: %s</string>
    <string name="folder">%d items</string>
    <string name="folder_is_empty">Folder %s is empty</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="favourite">Favourite</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="folder_empty">Empty folder</string>
    <string name="delete">Delete</string>
    <string name="_d_objects">%d objects</string>
    <string name="delete_d_items_">Delete %d items?</string>
    <string name="select_all">Select All</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="_d_files_deleted">%d files deleted</string>
    <string name="add_to_homescreen">Create shortcut</string>
    <string name="add_to_homescreen_multiple">Create shortcuts</string>
    <string name="shortcut_created">Shortcut added to homescreen</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="system">System</string>
    <string name="root">Root</string>
    <string name="cut">Cut</string>
    <string name="paste_here">Paste here</string>
    <string name="objects_cut_to_clipboard">Objects cut to clipboard</string>
    <string name="files_pasted">Files pasted</string>
    <string name="clipboard_is_empty">Clipboard is empty</string>
    <string name="refresh">Refresh</string>
    <string name="copy">Copy</string>
    <string name="objects_copied_to_clipboard">Objects copied to clipboard</string>
    <string name="create_folder">Create folder</string>
    <string name="create">Create</string>
    <string name="folder_created_successfully">Folder created successfully</string>
    <string name="loading_">Loading...</string>
    <string name="folder_could_not_be_created">Folder could not be created</string>
    <string name="pasting_files_">Pasting files...</string>
    <string name="downloads">Downloads</string>
    <string name="music">Music</string>
    <string name="pictures">Pictures</string>
    <string name="movies">Movies</string>
    <string name="dcim">DCIM</string>
    <string name="credits">App developed by Michal Dabski www.michaldabski.com
        \n
        \n        
        In-app icons from www.iconsdb.com</string>
    <string name="app_icon">App icon</string>
    <string name="up">Up</string>
    <string name="error">Error</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="file_renamed">File renamed</string>
    <string name="file_could_not_be_renamed_to_s">File could not be renamed to %s</string>
    <string name="photos">Photos</string>
    <string name="add_favourite">Add favourite</string>
    <string name="other_apps">Other apps</string>
    <string name="feedback">Feedback</string>
    <string name="file_info">File info</string>
    <string name="mime_type_s">MIME Type: %s</string>

</resources>
